<resources>
    <string name="app_name">Petrol Buddy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculated_mileage">Calculated Mileage</string>
    <string name="mileage_unit">km/l</string>
    <string name="dialog_km_heading">Current KM Reading :</string>
    <string name="dialog_price_heading">Price :</string>
    <string name="dialog_petrol_heading">Petrol :</string>
    <string name="dialog_date_heading">Date :</string>
    <string name="dialog_petrol_unit">lit.</string>
    <string name="dialog_price_unit">₹ </string>
    <string name="dialog_km_unit">km</string>
    <string name="no_data_available">No Data Available</string>
</resources>
